[package]
name = "message_service"
version = "0.1.0"
authors = ["kumarmo2 <kr.mohit6794@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.4", default-features = false, features = ["std"] }
futures-util = "0.3.4"
smol = {version = "0.1.4", features = ["tokio02"]}
lapin = "0.39.7"
serde = "1.0.106"
serde_json = "1.0"
manager = {git = "https://github.com/kumarmo2/rabbitmq_manager/", branch = "master"}
chat_common_types = {git = "https://github.com/kumarmo2/chat_common_types.git", branch = "master"}
num_cpus = "1.13.0"
reqwest = {version = "0.10.4", features = ["json"]}
# warp = "0.2"
# sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "mysql" ] }
